comment out unneeded routes
